building the base project
